Add gradle task for linking module